--- a/style.css
+++ b/style.css
@@ -59,7 +59,11 @@ header {
 .card {
   background: hsl(0deg, 0%, 100%);
   border-bottom: 8px solid hsl(0deg, 0%, 40%);
-  padding: 8px 32px 16px 32px;
+  padding: 16px 32px;
+}
+
+.card p:last-child {
+  margin-bottom: 0;
 }
 
 .indented-heading {
@@ -67,6 +71,6 @@ header {
   border-bottom: 8px solid hsl(45deg, 100%, 40%);
   padding: 24px 40px;
   margin-left: -40px;
-  margin-top: 0;
+  margin-top: -8;
   max-width: fit-content;
 }
